--- a/Sunsetter/Info.plist
+++ b/Sunsetter/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Attribution</key>
+	<array>
+		<string>Sun icon designed by Good Ware on Flaticon</string>
+		<string>Moon icon designed by Freepik on Flaticon</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -20,20 +25,21 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>LSUIElement</key>
+	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018 Michael Hulet. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
-	<key>LSUIElement</key>
-	<true/>
-	<key>Attribution</key>
-	<array>
-		<string>Sun icon designed by Good Ware on Flaticon</string>
-		<string>Moon icon designed by Freepik on Flaticon</string>
-	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Sunsetter needs to know your location so that it can accurately determine when to switch into and out of dark mode at sunrise and sunset at your location</string>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>Sunsetter needs to be able to tell macOS to enable and disable dark mode</string>
 </dict>
 </plist>
